@@ -1,3 +1,8 @@
+2007-01-31  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp.texi (Frequently Asked Questions): New item for
+	performance considerations.
+
 2007-01-23  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp.texi (Frequently Asked Questions): New item for dired
